--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body>
-    <h1>Chat-App made by Test Mittal Son of Rameshwar Mittal</h1>
+    <h1>Chat-App made by through chat-gpt Son of Rameshwar Mittal</h1>
 
       <input type="text" id="messages" placeholder="enter message" />
       <button id="sendbtn">Send</button>
